lab1/Test/L1-A-10-30.output
Error Type A at Line 12
Error Type B at Line 15
Error Type A at Line 22
Error Type A at Line 25
Error Type A at Line 34
Error Type A at Line 49
